tests/machine/x/ocaml/partial_application.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/partial_application.ml", line 7, characters 2-15:
7 |   print_endline add5 3
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 7):
   5 | 
   6 | let () =
   7 |   print_endline add5 3
   8 | 
