tests/machine/x/ocaml/partial_application.ml
let rec add a b =
  (a + b)

let add5 = add 5

let () =
  print_endline add5 3
